# tyverix

./: .env.example  .gitignore  README.md  RELEASING.md  changelog.html  config.js  i18n.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  util.rs
src-tauri/src/commands/: cleaner.rs  disk.rs  fps.rs  license.rs  memory.rs  mod.rs  monitor.rs  network.rs  power.rs  safety.rs  schedule.rs  startup.rs  stats.rs  system_info.rs
src/components/: AccountCard.tsx  AdminPanel.tsx  AuthGate.tsx  ConfirmDialog.tsx  Gauge.tsx  ProGate.tsx  Sidebar.tsx  Sparkline.tsx  Splash.tsx  TitleBar.tsx  Toaster.tsx  UpdateBanner.tsx  ui.tsx
src/hooks/: useMonitor.ts
src/i18n/: index.tsx
src/lib/: api.ts  format.ts  supabase.ts  types.ts
src/pages/: Cleaner.tsx  Dashboard.tsx  GameMode.tsx  Memory.tsx  Network.tsx  Processes.tsx  Safety.tsx  Settings.tsx  Startup.tsx  Tools.tsx
src/store/: useAuth.ts  useConfirm.ts  useLicense.ts  useNav.ts  useToast.ts  useUpdate.ts
supabase/: README.md  anti_abuse.sql  schema.sql  support.sql
supabase/functions/issue-license/: index.ts
tools/: license-keygen.mjs  sign-license.mjs
website/: account.html  auth.js  changelog.html  config.js  i18n.js  index.html  support-admin.html
