[package]
name = "tyverix"
version = "0.1.0"
description = "Trustworthy Windows gaming optimizer — measurable, reversible, safe."
authors = ["Tyverix"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tyverix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sysinfo = "0.30"
winreg = "0.52"
chrono = { version = "0.4", features = ["clock"] }
ed25519-dalek = "2"
base64 = "0.22"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
# Keep the shipped binary small and the idle footprint low.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
